<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Grunddaten der App für Manifest -->
    <string name="app_name">Pascals Hairdroid</string>
    <string name="pascals_hairdroid">Pascals Hairdroid</string>
    <string name="action_example"></string>
    <string name="action_settings"></string>
   
    <!-- Registrierung Activity -->
    <string name="vorname">Vorname</string>
    <string name="nachname">Nachname</string>
    <string name="passwort">Passwort</string>
    <string name="email">Email</string>
    <string name="telenr">Telefonnummer</string>
    <string name="registrierung">Registrieren</string>
    <string name="title_activity_register">Registerung</string>
    <string name="galerie">Galerie</string>
    
    <!-- Friseurstudio Activity -->
    <string name="title_activity_home">Friseurstudio</string>
    <string name="logout">Log Out</string>
    <string name="Ok">OK</string>
    <string name="Abbrechen">Abbrechen</string>
    <string name="back">zurück</string>
    <string name="title_angebote">Angebote</string>
    
        <!-- Opentime -->
     <string name="opentime">Öffnungszeiten</string>
     <string name="days">Dienstag - Samstag</string>
     <string name="vereibarung">Termine nach Vereinbarung</string>
     <string name="PascalNr">Pascal 0676 9238217</string>
     <string name="MatthiasNr">Matthias 0664 3966824</string>
     <string name="BorisNr">Boris 0660 6023000</string>
         
    
    <!-- Navidrawer Hauptmenü -->
    <string-array name="navigation_items">
        <item>Zeichen</item>
        <item>Friseurstudio</item>
        <item>Termine</item>
        <item>Angebote</item>
        <item>Produkte</item>
        <item>Galerie</item>
    </string-array>

    <!-- Navidrawer 1st Submenü -->
    <string-array name="child_navigation_items">
        <item>Das Studio</item>
        <item>Unser Team</item>
        <item>Dienstleistungen</item>
        <item>Öffnungszeiten</item>
        <item>Kontakt</item>
    </string-array>
    
    <!-- Navidrawer 2nd Submenü -->
    <string-array name="child_navigation_items2">
        <item>Färben</item>
        <item>Pflegen</item>
    </string-array>
    
     

    <!-- Kontakt Fragment  -->
    <string name="company">Pascals Hairstyle</string>
    <string name="pascal_petritsch">Pascal Petritsch</string>
    <string name="adresse">Wagramer Straße 154a</string>
    <string name="mobil">Mobil: 0676 92 38 217</string>
    <string name="ort">1220 Wien</string>
    <string name="homepage">www.pascals.at</string>

    <!-- Auswahl der Teammitglieder -->
    <string-array name="teamlist">
        <item>Pascal</item>
        <item>Mathias</item>
        <item>Boris</item>
    </string-array>
    
    <!-- Subinfo Teammitglieder -->
    <string-array name="teamsubinfo">
        <item>Geschäftsführer</item>
        <item>Mitarbeiter</item>
        <item>Mitarbeiter</item>
    </string-array>
    
	<!-- Login -->
    <string name="title_activity_login">Login</string>
    <string name="login_bt">Login</string>
    <string name="SignUp_bt">Sign up</string>
 
    <!-- Kundenprofil -->
    <string name="title_activity_kunden_profil">Kunden Profil</string>
    <string name="interessenBt">Interessen wählen</string>
    <string name="cancel">Zurück</string>
    <string name="save">Speichern</string>
    
    <string-array name="interessen">
        <item>Färben</item>
        <item>Tönen</item>
        <item>Strähnen</item>
        <item>Kurz Männer</item>
        <item>Kurz Frauen</item>
        <item>Lang Frauen</item>
        <item>Glättung</item>
        <item>Augenbrauen/Wimpern färben</item>
    </string-array>

    <string-array name="interessen_ids">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
    </string-array>
    

    
    
    <!-- nicht gebraucht -->
    <string name="tv_label">Type your Text: </string>
    <string name="title_activity_splash_screen">SplashScreen</string>
	<string name="termin_resevieren">Termin eintragen</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
	<string name="mofr">Montag - Freitag : 	11:00 -19:00 Uhr</string>
    <string name="sa">Samstag : 	09:00 -15:00 Uhr</string>	
</resources>
