<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    

    tools:context="com.example.pascalshairdroid.Register" >
   
        <requestFocus />

        <ImageView
            android:id="@+id/imgLogo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/homepage73" />

        <EditText
            android:id="@+id/t_vorname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/t_passwort"
            android:ems="10"
            android:hint="@string/vorname" />

        <EditText
            android:id="@+id/t_nachname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/t_vorname"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:hint="@string/nachname" />

        <EditText
            android:id="@+id/t_passwort"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/t_nachname"
            android:layout_below="@+id/t_nachname"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:hint="@string/passwort" />

        <EditText
            android:id="@+id/editText1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/email"
            android:layout_centerVertical="true"
            android:ems="10"
            android:hint="@string/telenr"
            android:inputType="phone" />

        <EditText
            android:id="@+id/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/t_passwort"
            android:layout_below="@+id/t_passwort"
            android:ems="10"
            android:hint="@string/email" />

        <Button
            android:id="@+id/b_registierung"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="38dp"
            android:background="@android:drawable/btn_default"
            android:text="@string/registrierung" />

</RelativeLayout>
