<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.pascalshairdroid.Home$PlaceholderFragment" >

    <TextView
        android:id="@+id/company_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
        android:text="@string/pascals_hairdroid" />

        <TextView
            android:id="@+id/adresse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/company_name"
            android:layout_below="@+id/company_name"
            android:layout_marginTop="37dp"
            android:text="@string/adresse" />

        <TextView
            android:id="@+id/ort"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/adresse"
            android:layout_below="@+id/adresse"
            android:text="@string/ort" />

        <TextView
            android:id="@+id/petritsch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/adresse"
            android:layout_alignLeft="@+id/adresse"
            android:layout_marginBottom="16dp"
            android:text="@string/pascal_petritsch" />

</RelativeLayout>
